<resources>
    <string name="app_name">Spaciko</string>
    <string name="next">Next</string>
    <string name="lbl_become_a_host">Become \na host</string>
    <string name="lbl_work_anywhere">Work \nAnywhere</string>
    <string name="btn_start_hosting_today">BECOME A HOST</string>
    <string name="lbl_email_condtion">Email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password ?</string>
    <string name="lbl_login">Log In</string>
    <string name="lbl_sign_in_with">Sign In With</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_first_name">First name</string>
    <string name="lbl_birthday">Birthday</string>
    <string name="lbl_age_condition">To sign up, you must be 18 or older. Other people won\'t see your birthday.</string>
    <string name="lbl_birthday_formate">mm/dd/year</string>
    <string name="lbl_signup_condition">By signing up, I agree to spaciko\'s, Terms and conditions, Privacy Policy, Guest Refund, consent disagree</string>
    <string name="lbl_send">Send</string>
    <string name="lbl_ready_to_place">Ready to place your space in the spotlight?</string>
    <string name="lbl_type_of_space">What type of space do you own?</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="lbl_shared">Shared</string>
    <string name="lbl_private">Private</string>
    <string name="lbl_all_this">No, I\'m new to all this!</string>
    <string name="lbl_space_hosting">Yes, I\'m experienced with space hosting</string>
    <string name="lbl_big_space">How big is your space?</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_select_all_of_the_amenities">Please select all of the amenities that can be found in your space. Tick as few or as many as are relevant.</string>
    <string name="lbl_enter_more_information">If there is any additional information about the services you listed above, like available packages and/or rate options, please share more details below.</string>
    <string name="lbl_services">What services and \"extras\" can be found in your space?</string>
    <string name="lbl_provide_address">Please provide the full physical address of your venue.</string>
    <string name="lbl_housename_number_road">House name/number + street/road</string>
    <string name="lbl_comment">Comment</string>
    <string name="lbl_use_image">Use images to bring your space to life!</string>
    <string name="lbl_image_upload">Guests want to know what your space looks like. If you have photos, now\'s the time to share them! Don\'t worry- you can always come back later.</string>
    <string name="lbl_upload_image">Upload Image</string>
    <string name="lbl_write_comment_here">Write comment here</string>
    <string name="lbl_style_of_space">The style of my space can be described as...</string>
    <string name="lbl_more_about_space">Tell travelers more about your space</string>
    <string name="lbl_listing_name">Listing Name</string>
    <string name="lbl_summary">Summary</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_upcoming">Upcoming</string>
    <string name="lbl_previous">Previous</string>
    <string name="lbl_booking">Booking</string>
    <string name="lbl_accepted">Accepted</string>
    <string name="lbl_some_text_here">Some Text Here</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_billing_address">Billing Address</string>
    <string name="lbl_organization_name">Organization name</string>
    <string name="lbl_card_info">Card Info</string>
    <string name="lbl_card_number">Card Number</string>
    <string name="lbl_exp_date">Exp. Date</string>
    <string name="lbl_cvv">cvv</string>
    <string name="lbl_additional_info">Additional Info</string>
    <string name="lbl_book">Book</string>
    <string name="payment_mode">Paymeny Mode</string>
    <string name="lbl_address">42 E.Lincoln St. Glen Ellyn, IL 660137</string>
    <string name="lbl_private_office_750ft">Private Office (750ft)</string>
    <string name="lbl__5_0">5.0</string>
    <string name="lbl_book_now">Book Now</string>
    <string name="lbl_book_now1">Book Now!</string>
    <string name="lbl_setyourdates">Set your dates</string>
    <string name="lbl_jhon_donga">Jhon Donga</string>
    <string name="lbl_private_office">Private Office</string>
    <string name="lbl_30_people">Working Guests</string>
    <string name="lbl_230_sf">230 SF</string>
    <string name="lbl_about">About</string>
    <string name="lbl_loirm">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="lbl_the_space">The Space</string>
    <string name="lbl_pricing">Pricing</string>
    <string name="lbl_100">$100</string>
    <string name="lbl_02">02</string>
    <string name="lbl_ac">Ac</string>
    <string name="lbl_food">Food</string>
    <string name="lbl_guest_access">Guest Access</string>
    <string name="lbl_service_offered">Service offered</string>
    <string name="lbl_space_availability">Space Availability</string>
    <string name="lbl_cancellation_policy">Cancellation policy</string>
    <string name="lbl_flexible">Flexible</string>
    <string name="lbl_message">Message</string>
    <string name="lbl_amenities">Amenities</string>
    <string name="lbl_search_the_market">Search The Market</string>
    <string name="lbl_categories">Space Types</string>
    <string name="lbl_lets_see">Pick a working space</string>
    <string name="lbl_see_all">See All</string>
    <string name="lbl__45_20_hour">$45.20/Hour</string>
    <string name="lbl_listed">Listed</string>
    <string name="lbl_you_are_100_of_the_way">You are 100% of the Way</string>
    <string name="lbl_listing">Listings</string>
    <string name="lbl_listingname">Listing Name</string>
    <string name="lbladd">Add</string>
    <string name="lbl_good_job">Good job! You\`re almost done!</string>
    <string name="lbl_there_are_just">There are just a few more things we need to know</string>
    <string name="lbl_the_basic">The Basic</string>
    <string name="lbl_preview">Preview</string>
    <string name="lbl_setup">Setup</string>
    <string name="lbl_Prepring">Preparing to host</string>
    <string name="lbl_language">Language</string>
    <string name="lbl_english">English</string>
    <string name="lbl_payment_method">Payment Method</string>
    <string name="lbl_secure_of_spaciko">Secure of Spaciko</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_profilename">Ada Shelby</string>
    <string name="lbl_username">\@username</string>
    <string name="lbl_view_and_edit_profile">My Profile</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_help_and_support">Help and Support</string>
    <string name="lbl_my_listing">My Listings</string>
    <string name="lbl_my_reservation">My Reservations</string>
    <string name="lbl_wishlist">Wishlist</string>
    <string name="lbl_helpcneter">Help Center</string>
    <string name="lbl_suggest_helps_list">Suggest helps List</string>
    <string name="lbl_create_account">How Do I create an Account</string>
    <string name="lbl_searching_and_spaciko">Searching And Spaciko</string>
    <string name="lbl_listing_include">what should my listing include</string>
    <string name="lbl_become_host">Become A Host!</string>
    <string name="lbl_spaciko_fees">What are Spaciko fees</string>
    <string name="lbl_appropriate_feedback">We do appropriate Feedback! \n Please share with us what\'s on \n your mind</string>
    <string name="lbl_radiobutton_listing">the listing description or pics are misleading and does not match reality</string>
    <string name="lbl_listing_currently_occupied">the listing is currently occupied by others.</string>
    <string name="lbl_listing_clean">the listing is not clean</string>
    <string name="lbl_contacting_host">the listing is closed and I can\'t access the listing. i tried contacting the host</string>
    <string name="lbl_other">other</string>
    <string name="lbl_respect">1. Did the gust treat your space with respect?</string>
    <string name="lbl_set_your_price">Set your price</string>
    <string name="lbl_minimum_hourly_rate_is">Minimum Hourly Rate is $702</string>
    <string name="lbl_daily_rate">Daily Rate</string>
    <string name="lbl_hourly_rate">Hourly Rate</string>
    <string name="lbl_weekly_rate">Weekly Rate</string>
    <string name="lbl_monthly_rate">Monthly Rate</string>
    <string name="lbl_length_ot_stay_discounts">Length of stay discounts</string>
    <string name="lbl_percentage">%</string>
    <string name="lbl_sunday">Sunday</string>
    <string name="lbl_monday">Monday</string>
    <string name="lbl_tuesday">Tuesday</string>
    <string name="lbl_wednesday">Wednesday</string>
    <string name="lbl_thursday">Thursday</string>
    <string name="lbl_friday">Friday</string>
    <string name="lbl_saturday">Saturday</string>
    <string-array name="arr_listed">
        <item>Listed</item>
    </string-array>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_change">Change</string>
    <string name="lbl_contacthost">Contact Host</string>
    <string name="lbl_reservation_number">Reservation number</string>
    <string name="lbl_amountbeinglost">Amount being lost</string>
    <string name="lbl_cancellation_msg">This might affect your hosting score.By cancelling this reservation - You`re about to break somebody`s dream.</string>
    <string name="lbl_cancel_reservation">Cancel Reservation</string>
    <string name="lbl_payment_breakdown">Payment Breakdown</string>
    <string name="lbl_cleaning_fee">Security deposit</string>
    <string name="lbl_service_fee">Service Fee</string>
    <string name="lbl_original_payout">Original Payout</string>
    <string name="lbl_change_reservation">Change Reservation</string>
    <string name="lbl_set_your_cancellation_policy">Set your cancellation policy</string>
    <string name="lbl_booking_type">Booking Type</string>
    <string name="lbl_show_work_travelers">Show work Travelers When \nThey Can Book</string>
    <string name="lbl_today">Today</string>
    <string name="lbl_reservations">Reservations</string>
    <string name="lbl_blocked">Blocked</string>
    <string name="lbl_not_available">Not available</string>
    <string name="lbl_contact_host">Contact Host</string>
    <string name="lbl_contact_guest">Contact Guest</string>
    <string name="lbl_itinerary">Itinerary</string>
    <string name="lbl_reviews">Reviews</string>
    <string name="lbl_chats">Chats</string>
    <string name="lbl_search_here">Search here....</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_send_special_offer">Send Special Offer</string>
    <string name="lbl_dates">Dates</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_doller">ILS</string>
    <string name="lbl_send_special_offer_a">Special offer</string>
    <string name="spaciko_making_sure_everyone_can_afford_working_in_a_private_space">Spaciko,making sure everyone can afford working in a private space!</string>
    <string name="become_a_host">Become a host</string>
    <string name="work_anywhere">Work Anywhere</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="not_a_member">Not a member?</string>
    <string name="sign_in_with">Sign In With</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
</resources>