<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivIcon"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:src="@drawable/logo"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toEndOf="@id/ivBackground"
        app:layout_constraintStart_toStartOf="@+id/ivBackground"
        app:layout_constraintTop_toTopOf="@+id/ivBackground" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="35dp"
        android:hint="@string/first_name"
        android:paddingStart="25dp"
        android:paddingEnd="55dp"
        android:paddingVertical="10dp"
        android:background="@drawable/grey_border_bg"
        app:layout_constraintEnd_toStartOf="@id/etLastName"
        app:layout_constraintStart_toStartOf="@+id/ivBackground"
        app:layout_constraintTop_toBottomOf="@+id/ivIcon" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/last_name"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="35dp"
        android:paddingStart="25dp"
        android:paddingEnd="55dp"
        android:paddingVertical="10dp"
        android:background="@drawable/grey_border_bg"
        app:layout_constraintEnd_toEndOf="@id/ivBackground"
        app:layout_constraintStart_toEndOf="@id/etFirstName"
        app:layout_constraintTop_toBottomOf="@+id/ivIcon" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="35dp"
        android:hint="@string/email"
        android:paddingStart="25dp"
        android:paddingVertical="10dp"
        android:background="@drawable/grey_border_bg"
        app:layout_constraintEnd_toEndOf="@id/ivBackground"
        app:layout_constraintStart_toStartOf="@+id/ivBackground"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="35dp"
        android:hint="@string/password"
        android:paddingStart="25dp"
        android:paddingVertical="10dp"
        android:background="@drawable/grey_border_bg"
        app:layout_constraintEnd_toEndOf="@id/ivBackground"
        app:layout_constraintStart_toStartOf="@+id/ivBackground"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <androidx.appcompat.widget.AppCompatRadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rbTerms"
        text="terms and condition"
        android:gravity="top"
        android:textSize="17sp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="35dp"
        style="@style/TextBoldGrey20"
        app:layout_constraintStart_toStartOf="@id/etPassword"
        app:layout_constraintEnd_toEndOf="@id/etPassword"
        app:layout_constraintTop_toBottomOf="@id/etPassword"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="35dp"
        android:background="@drawable/btn_submit_green_bg"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="23sp"
        android:layout_marginBottom="50dp"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rbTerms" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvSignInWith"
        android:text="@string/sign_in_with"
        android:gravity="center_horizontal"
        android:layout_marginTop="12dp"
        style="@style/TextRegularBlack20"
        app:layout_constraintStart_toStartOf="@id/btnLogIn"
        app:layout_constraintEnd_toEndOf="@id/btnLogIn"
        app:layout_constraintTop_toBottomOf="@id/btnLogIn"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llFbGoogle"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/tvSignInWith"
        app:layout_constraintEnd_toEndOf="@id/tvSignInWith"
        app:layout_constraintTop_toBottomOf="@id/tvSignInWith">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/ivFacebook"
            android:src="@drawable/facebook"
            android:layout_marginEnd="15dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivGoogle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/google"
            android:layout_marginStart="15dp"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvHaveAccount"
        android:text="@string/already_have_an_account"
        android:layout_marginTop="12dp"
        android:layout_marginStart="45dp"
        style="@style/TextRegularBlack20"
        app:layout_constraintStart_toStartOf="@id/llFbGoogle"
        app:layout_constraintEnd_toStartOf="@id/tvLogIn"
        app:layout_constraintTop_toBottomOf="@id/llFbGoogle"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLogIn"
        style="@style/TextRegularPrimaryColor22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/log_in"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@id/tvHaveAccount"
        app:layout_constraintTop_toBottomOf="@id/llFbGoogle" />

</androidx.constraintlayout.widget.ConstraintLayout>