<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorWhite">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:layout_marginBottom="20dp"
        android:src="@drawable/second_intro"
        app:layout_constraintBottom_toTopOf="@+id/tvDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDetail"
        style="@style/TextRegularGrey18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:singleLine="false"
        android:text="@string/spaciko_making_sure_everyone_can_afford_working_in_a_private_space"
        app:layout_constraintBottom_toTopOf="@+id/appCompatImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/light_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

    </androidx.appcompat.widget.AppCompatImageView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivHostBg"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="48dp"
        android:src="@drawable/red_round"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
        app:layout_constraintStart_toStartOf="@+id/appCompatImageView"
        app:layout_constraintTop_toTopOf="@+id/appCompatImageView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHost"
        style="@style/TextRegularWhite20"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/become_a_host"
        app:layout_constraintBottom_toBottomOf="@+id/ivHostBg"
        app:layout_constraintEnd_toEndOf="@+id/ivHostBg"
        app:layout_constraintStart_toStartOf="@+id/ivHostBg"
        app:layout_constraintTop_toTopOf="@+id/ivHostBg" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivWorkBg"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginEnd="48dp"
        android:src="@drawable/light_red_round"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
        app:layout_constraintEnd_toEndOf="@+id/appCompatImageView"
        app:layout_constraintTop_toTopOf="@+id/appCompatImageView"  />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWork"
        style="@style/TextRegularWhite20"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/work_anywhere"
        app:layout_constraintBottom_toBottomOf="@+id/ivWorkBg"
        app:layout_constraintEnd_toEndOf="@+id/ivWorkBg"
        app:layout_constraintStart_toStartOf="@+id/ivWorkBg"
        app:layout_constraintTop_toTopOf="@+id/ivWorkBg" />

</androidx.constraintlayout.widget.ConstraintLayout>